--- a/index.html
+++ b/index.html
@@ -113,9 +113,12 @@
   </div>
   <div id="interview">
     <div id="interview-header">
-      <h1 class="article-title after_foto">Raúl Castro: “Metodológicamente, la murga es de izquierda”</h1>
+      <h1 class="article-title after_foto">
+        Pepe: “La arquitectura es una película en constante evolución y cada
+        proyecto cuenta una nueva historia”
+      </h1>
       <p class="subtitle">Publicado el 29 de agosto</p>
-      <p class="subtitle"> Escribe Facundo Suárez</p>
+      <p class="subtitle"> Escribe Facundo Suárez y Leandro Balero</p>
       <p class="subtitle">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
           <path
@@ -127,18 +130,226 @@
     </div>
     <div id="interview-title">
       <h2 class="title">
-        Tinta Brava, que escribió las retiradas de Los Diablos Verdes y La Gran Muñeca, asegura que la murga uruguaya atraviesa un momento “maravilloso” y
-        que es “la revolución cultural que viene del sur”.
+        Pepe, que comunica historias y emociones a través de los espacios, cree que los edificios
+        narran historias similares a las películas, guiando a las personas con sus formas y materiales.
       </h2>
     </div>
     <p class="dictate">
-      El letrista no se olvida. A sus 73 años, Raúl Castro permanece vigente y con ganas de ser parte del carnaval. Convocado por dos murgas con mucha historia para
-      aportar su pluma en las retiradas, el Flaco prepara además el regreso de su espectáculo Tinta Brava y el Bandón Murguero, que se presentará en el teatro Solís
-      a partir del 30 de mayo.
+      A los 40 años, el arquitecto uruguayo se encuentra en un momento vibrante de
+      su carrera, combinando su pasión por la arquitectura con una mirada única
+      influenciada por su amor por el cine. Formado en la Facultad de Arquitectura de
+      la Universidad de la República y con una profunda conexión con su barrio de
+      Colón, donde desarrolló su aprecio por la lectura y el cine durante los largos
+      trayectos en ómnibus, ha llevado esta sensibilidad cinematográfica a su
+      práctica profesional.
+    </p>
+    <p class="dictate">
+      En dialogo con la diaria, nos adentraremos en cómo la arquitectura puede
+      narrar historias, cómo los espacios pueden convertirse en escenarios que
+      influencian la vida cotidiana y cómo el uso textil puede transformar la
+      percepción del espacio, todo ello desde la perspectiva de un profesional cuya
+      vida y obra están profundamente marcadas por la intersección entre la
+      arquitectura y el cine
     </p>
     <p class="question">
-      ¿Cómo se da esto de que dos conjuntos distintos te invitaron para escribir en este carnaval?
+      ¿Que pensás que es la arquitectura?
     </p>
+    <p class="dictate">
+      La arquitectura, en su esencia más pura, es una herramienta de comunicación
+      que va más allá de la mera construcción de edificios. Es un lenguaje silencioso
+      que, a través de formas, materiales y espacios, narra historias, expresa ideas y
+      refleja las emociones de quienes la habitan. Pensá en cómo una simple elección
+      de material puede cambiar la sensación de un espacio, o cómo la disposición
+      de los ambientes puede dirigir el flujo de la vida cotidiana como si se tratara de
+      una coreografía cuidadosamente orquestada.
+    </p>
+    <p class="dictate">
+      Pero la arquitectura también es un reflejo de nuestra sociedad, de nuestras
+      aspiraciones y contradicciones. Está en esa intersección incómoda entre la
+      visión del arquitecto y la realidad de las personas donde encuentro la
+      verdadera riqueza de la disciplina. El desafío está en encontrar un equilibrio
+      entre la autoría y la habitabilidad, en diseñar espacios que no solo sean
+      estéticamente agradables, sino que también sean funcionales y accesibles.
+    </p>
+    <p class="dictate">
+      Es, en si misma, una escena en constante evolución, una película que se
+      proyecta en el espacio y en el tiempo. Cada proyecto es una oportunidad para
+      contar una nueva historia, para crear un escenario que, aunque efímero, pueda
+      dejar una huella en la memoria de quienes lo experimentan. Es en esa
+      capacidad de evocación, de crear atmósferas y de influir en la vida de las
+      personas, donde radica el verdadero poder de la arquitectura.
+    </p>
+    <p class="question">
+      ¿Me querés contar como es eso de que la arquitectura narra
+      historias?
+    </p>
+    <p class="dictate">
+      La arquitectura narra historias de una manera que va más allá de las palabras.
+      Cada espacio, cada edificio, es como una página en blanco que se llena con las
+      experiencias de quienes lo habitan, lo visitan o simplemente lo observan Cof...
+      La disposición de los espacios, la elección de los materiales, la forma en que la
+      luz entra en una habitación—todo esto conforma una narrativa que guía a las
+      personas a través del espacio, como si fuera una historia que se despliega a
+      medida que te movés por ella.
+    </p>
+    <p class="dictate">
+      Pensá en un recorrido por una casa, por ejemplo. El umbral de entrada es el
+      prólogo, donde se establece el tono de lo que viene. Luego, al entrar al hall, la
+      historia comienza a desarrollarse: la manera en que los espacios se conectan o
+      se aíslan entre sí puede hablar de apertura o de privacidad, de fluidez o de
+      contención. Un corredor estrecho y oscuro puede generar una sensación de
+      tensión o misterio, mientras que una sala amplia y luminosa puede evocar una
+      sensación de libertad o expansión.
+    </p>
+    <p class="dictate">
+      En una película, el director usa la cámara, la música y la edición para contar una
+      historia. En la arquitectura, el “director” usa la escala, la textura, la proporción,
+      y el material para crear una narrativa espacial. Un ejemplo claro son los
+      edificios históricos que cuentan la historia de una época a través de sus
+      detalles: columnas, frisos, materidades. Incluso en los espacios más
+      contemporáneos, el minimalismo, por ejemplo, puede contar una historia de
+      simplicidad, de orden, o incluso de austeridad, dependiendo del contexto y del
+      uso que se le dé.
+    </p>
+    <p class="dictate">
+      Los espacios también narran historias más íntimas, más personales. Un rincón
+      con una silla junto a una ventana puede contar la historia de alguien que busca
+      un momento de calma y reflexión. Un patio central puede ser el corazón de una
+      casa, donde las historias de la familia se entrelazan y se desarrollan al aire
+      libre. Es como si cada espacio fuera una escena dentro de una narrativa mayor,
+      donde los habitantes son los personajes y sus vidas, las tramas que se
+      desarrollan en ese escenario arquitectónico.
+    </p>
+    <p class="dictate">
+      ¿Vos has tenido alguna experiencia así?
+    </p>
+    <p class="question">
+      Siempre; mil. Aunque sin tanta altura con las palabras para
+      contarlo. Recuerdo mi casa con especial arraigo. En particular una
+      fina luz espléndida, entrando por los agujeritos que dejaba la
+      persiana cuando estaba baja. Para mi en esos momentos era la
+      iluminación de mi escena de vida; era genial.
+    </p>
+    <p class="question">
+      ¿Vos recordás alguna "escena” así de tu vida?
+    </p>
+    <p class="dictate">
+      Esa imagen de la luz filtrándose por la persiana me resonó. Es increíble cómo
+      esos detalles tan cotidianos pueden quedarse grabados, como si fueran
+      escenas clave en una película. Para mí, los viajes en el 174 Aviación fueron ese
+      tipo de escenas. Esos trayectos largos desde Colón hasta facultad, con las
+      calles de Montevideo desfilando por la ventana del bondi, eran como una
+      suerte de transición entre capítulos en mi vida.
+    </p>
+    <p class="dictate">
+      Había algo en la monotonía de esos viajes que me permitía desconectarme un
+      poco de todo, para luego sumergirme en los libros que llevaba siempre
+      conmigo. Me acuerdo de las mañanas heladas, cuando el aliento empañaba el
+      vidrio y apenas se distinguía la silueta de los árboles en la oscuridad. La ciudad
+      parecía estar despertándose de a poco, y yo con ella, a medida que avanzaba
+      el bondi. Las luces de las calles, el murmullo de la gente que iba subiendo y
+      bajando, el sonido del motor—todo eso formaba parte de la banda sonora de mi
+      propia película diaria.
+    </p>
+    <p class="dictate">
+      Y claro, como a vos con la luz de la persiana, había momentos en que el sol
+      entraba por las ventanas del bondi, justo en el ángulo perfecto, proyectando
+      sombras largas y doradas en el interior. Era como si el sol también fuera un
+      personaje más en esa escena cotidiana, aportando su cuota de dramatismo.
+      Una especie de pausa en medio del caos, donde todo se detenía por un
+      instante y uno podía simplemente… observar.
+    </p>
+    <p class="question">
+      ¿Y sentís que esas escenas de tu vida influyen en la manera en que
+      diseñás o pensás los espacios?
+    </p>
+    <p class="dictate">
+      Cof, cof… –Bueno, dame un segundo. Chisquido del encendedor, enciende un
+      cigarrillo y el humo se exhala lentamente.
+    </p>
+    <p class="dictate">
+      Decía que esos recuerdos, esas escenas que se quedan en la memoria, tienen
+      una manera de aferrarse a uno. Es como en esas películas de Wong Kar-wai,
+      donde cada escena está impregnada de una atmósfera tan densa que casi
+      podés sentirla. Pensá en “In the Mood for Love,” por ejemplo. La manera en que
+      las luces de neón y las sombras crean un ambiente tan cargado de nostalgia y
+      deseo… eso, de alguna manera, se refleja en cómo uno habita y diseña los
+      espacios.
+    </p>
+    <p class="dictate">
+      Cof cof… Lo que quiero decir es que, al igual que en esas películas, los
+      espacios que habitamos tienen la capacidad de evocar emociones, de hacernos
+      sentir algo más allá de lo tangible. Cuando estoy diseñando, busco esa misma
+      carga emocional, ese peso atmosférico que te hace recordar una escena
+      mucho después de que haya pasado.
+    </p>
+    <p class="dictate">
+      Cuando diseño, muchas veces trato de capturar esas atmósferas, esos
+      pequeños momentos que parecen insignificantes pero que se quedan grabados
+      en la memoria. Esos instantes donde el espacio y la luz se encuentran de
+      manera tan perfecta que todo lo demás parece desvanecerse. Me gusta pensar
+      que, al diseñar un espacio, estoy creando un escenario para que otros puedan
+      vivir sus propias “escenas”, esos momentos que no necesariamente se planean
+      pero que terminan siendo magníficos.
+    </p>
+    <p class="question">
+      ¿En que venís trabajando últimamente? ¿Experimentás con alguna
+      textura o materialidad para estas "escenas"?
+    </p>
+    <p class="dictate">
+      Cof cof… Últimamente he estado bastante inmerso en un proyecto que juega
+      mucho con texturas y materialidades, buscando esa cualidad casi táctil que
+      –
+      pueden ofrecer ciertos materiales. Estoy trabajando en una vivienda que se
+      basa en la idea de transiciones, de cómo podés pasar de un ambiente a otro
+      sintiendo una diferencia sutil en el espacio, algo que no siempre es visible pero
+      que podés percibir con el cuerpo, con la piel.
+    </p>
+    <p class="dictate">
+      En este proyecto, estoy experimentando con una combinación de
+      materialidades que buscan crear una especie de “palimpsesto” de sensaciones.
+      Los límites, en este caso, no son simplemente superficies lisas, sino que tienen
+      una textura que podés sentir al pasar la mano. Estoy utilizando cortinas gruesas
+      de una tela aluminizada que recrear firmemente un límite, pero que siempre
+      mantienen esa sensación de ligereza. Quiero que los habitantes sientan que
+      pueden modificar el espacio a su antojo, casi como si estuvieran moviendo las
+      piezas de un escenario teatral: que el espacio se sienta vivido.
+    </p>
+    <p class="question">
+      ¿Y como viene a vos el uso de telas en la arquitectura? ¿Tiene
+      intención de evocar alguna de estas sensaciones?
+    </p>
+    <p class="dictate">
+      Viene de una necesidad casi instintiva de suavizar, de humanizar el espacio.
+      Las telas tienen una cualidad que otros materiales no pueden replicar: su
+      capacidad de moverse, de cambiar con la luz, con el viento, con el tacto. En
+      ese sentido, cof cof, no son solo un elemento estético, sino un componente
+      que transforma el espacio en algo más vivo, más cercano.
+    </p>
+    <p class="dictate">
+      Pienso en cómo la telas puede envolver un espacio, redefinirlo sin necesidad de
+      construir nada nuevo. Es como si crearan un segundo nivel de realidad, algo
+      que está ahí pero que podés atravesar o modificar. Pausa y una calada al
+      cigarrillo. Es un poco como en “Blow-Up” de Antonioni, donde los detalles más
+      sutiles de la escena—a veces casi invisibles—terminan por definir toda la
+      narrativa. Las telas, en cierta manera, juegan ese papel en la arquitectura; son
+      ese detalle que, sin ser protagonista, cambia por completo la atmósfera.
+    </p>
+    <p class="dictate">
+      Cof cof… Es interesante porque también están ahí para crear una sensación de
+      impermanencia, de que el espacio puede cambiar, de que nada es
+      completamente fijo. Las telas pueden redefinir una habitación, suavizar los
+      bordes, crear sombras que varían con la hora del día, y eso le da al espacio una
+      cualidad casi cinematográfica, donde la escena nunca es exactamente la
+      misma.
+    </p>
+    <p class="dictate">
+      Y sí, definitivamente hay una intención de evocar esas sensaciones que
+      mencionábamos antes. Es algo que he intentado capturar en varios de mis
+      proyectos, esa idea de que el espacio no solo se habita, sino que se siente, se
+      experimenta en múltiples capas.
+    </p>
+
   </div>
 
   <div class="ld-fin ld-block"></div>
