--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
       diseñás o pensás los espacios?
     </p>
     <p class="dictate">
-      Cof, cof… –Bueno, dame un segundo. Chisquido del encendedor, enciende un
-      cigarrillo y el humo se exhala lentamente.
+      <span class="italic">Cof, cof… </span>–Bueno, dame un segundo.<span class="italic"> Chisquido del encendedor, enciende un
+      cigarrillo y el humo se exhala lentamente.</span>
     </p>
     <p class="dictate">
       Decía que esos recuerdos, esas escenas que se quedan en la memoria, tienen
@@ -277,7 +277,7 @@
       espacios.
     </p>
     <p class="dictate">
-      Cof cof… Lo que quiero decir es que, al igual que en esas películas, los
+      <span class="italic">Cof, cof… </span> Lo que quiero decir es que, al igual que en esas películas, los
       espacios que habitamos tienen la capacidad de evocar emociones, de hacernos
       sentir algo más allá de lo tangible. Cuando estoy diseñando, busco esa misma
       carga emocional, ese peso atmosférico que te hace recordar una escena
@@ -297,7 +297,7 @@
       textura o materialidad para estas "escenas"?
     </p>
     <p class="dictate">
-      Cof cof… Últimamente he estado bastante inmerso en un proyecto que juega
+      <span class="italic">Cof, cof… </span> Últimamente he estado bastante inmerso en un proyecto que juega
       mucho con texturas y materialidades, buscando esa cualidad casi táctil que
       –
       pueden ofrecer ciertos materiales. Estoy trabajando en una vivienda que se
@@ -336,7 +336,7 @@
       ese detalle que, sin ser protagonista, cambia por completo la atmósfera.
     </p>
     <p class="dictate">
-      Cof cof… Es interesante porque también están ahí para crear una sensación de
+      <span class="italic">Cof, cof… </span> Es interesante porque también están ahí para crear una sensación de
       impermanencia, de que el espacio puede cambiar, de que nada es
       completamente fijo. Las telas pueden redefinir una habitación, suavizar los
       bordes, crear sombras que varían con la hora del día, y eso le da al espacio una
