--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
 
-  <meta property="og:title" content="Entrevista Pepe">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
+  <meta property="og:title" content="Interview with Pepe">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://agustinferres.github.io/facundo-interview/">
+  <meta property="og:image" content="https://www.mywebsite.com/images/pepe-interview.jpg">
+  <meta property="og:image:alt" content="Pepe during the interview">
 
-  <link rel="icon" href="/img/img.png" sizes="any">
-  <link rel="icon" href="/img/img.png" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/img/img.png">
+  <link rel="icon" href="https://github.com/AgustinFerres/facundo-interview/blob/main/img/img.png?raw=true" sizes="any">
+  <link rel="icon" href="https://github.com/AgustinFerres/facundo-interview/blob/main/img/img.png?raw=true" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="https://github.com/AgustinFerres/facundo-interview/blob/main/img/img.png?raw=true">
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
@@ -348,6 +348,18 @@
       mencionábamos antes. Es algo que he intentado capturar en varios de mis
       proyectos, esa idea de que el espacio no solo se habita, sino que se siente, se
       experimenta en múltiples capas.
+    </p>
+    <p class="question">
+      ¿Qué es lo que debe tener un proyecto para ser “bueno”?
+    </p>
+    <p class="dictate">
+      Un proyecto de arquitectura necesita tener cof cof una narrativa, una historia que se pueda leer a través de sus espacios. No se trata solo de cumplir con
+      las funciones básicas, sino de crear una experiencia, un viaje emocional que el usuario pueda vivir. Es como en cualquier buena película: las películas de
+      Fellini, por ejemplo. “La Dolce Vita” construye una Roma de ensueño, llena de contrastes y matices, y es precisamente esa capacidad de evocar una
+      experiencia completa lo que pienso que debería tener un proyecto arquitectónico. La ciudad es casi un personaje más, con sus ambientes opulentos y sus
+      rincones más oscuros. Lo que hace que la película sea tan poderosa es cómo estos espacios no solo sirven de fondo, sino que reflejan las emociones y las
+      historias de los personajes. Cada escena tiene su propio significado, su propia atmósfera que contribuye a la narrativa general. Un buen proyecto debe hacer
+      lo mismo: contar una historia a través de su diseño.
     </p>
 
   </div>
