--- a/index.html
+++ b/index.html
@@ -353,13 +353,13 @@
       ¿Qué es lo que debe tener un proyecto para ser “bueno”?
     </p>
     <p class="dictate">
-      Un proyecto de arquitectura necesita tener cof cof una narrativa, una historia que se pueda leer a través de sus espacios. No se trata solo de cumplir con
+      Un proyecto de arquitectura necesita tener <span class="italic">Cof, cof… </span> una narrativa, una historia que se pueda leer a través de sus espacios. No se trata solo de cumplir con
       las funciones básicas, sino de crear una experiencia, un viaje emocional que el usuario pueda vivir. Es como en cualquier buena película: las películas de
       Fellini, por ejemplo. “La Dolce Vita” construye una Roma de ensueño, llena de contrastes y matices, y es precisamente esa capacidad de evocar una
       experiencia completa lo que pienso que debería tener un proyecto arquitectónico. La ciudad es casi un personaje más, con sus ambientes opulentos y sus
       rincones más oscuros. Lo que hace que la película sea tan poderosa es cómo estos espacios no solo sirven de fondo, sino que reflejan las emociones y las
       historias de los personajes. Cada escena tiene su propio significado, su propia atmósfera que contribuye a la narrativa general. Un buen proyecto debe hacer
-      lo mismo: contar una historia a través de su diseño.
+      lo mismo: <span class="italic">contar una historia a través de su diseño.</span>
     </p>
 
   </div>
