--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="es">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Entrevista Pepe</title>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+  <meta name="description" content="This is an interview with Pepe, a renowned architect. In this interview, Pepe shares his insights on architecture, storytelling, and his latest projects.">
 
   <meta property="og:title" content="Interview with Pepe">
   <meta property="og:type" content="article">
