--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta property="og:title" content="Interview with Pepe">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://agustinferres.github.io/facundo-interview/">
-  <meta property="og:image" content="https://www.mywebsite.com/images/pepe-interview.jpg">
-  <meta property="og:image:alt" content="Pepe during the interview">
+  <meta property="og:image" content="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto1.jpg?raw=true">
+  <meta property="og:image:alt" content="Photo of a building designed by Pepe">
 
   <link rel="icon" href="https://github.com/AgustinFerres/facundo-interview/blob/main/img/img.png?raw=true" sizes="any">
   <link rel="icon" href="https://github.com/AgustinFerres/facundo-interview/blob/main/img/img.png?raw=true" type="image/svg+xml">
@@ -89,24 +89,7 @@
 <!-- Add your site or application content here -->
 <main id="main">
   <div id="foto">
-    <picture class="materialboxed initialized">
-      <!--[if IE 9]>
-      <video style="display: none;"><![endif]-->
-      <source srcset="https://ladiaria.com.uy/media/photologue/photos/cache/RS146842_20221220-MVU-004-lpr_1200w.jpg"
-              media="(min-width: 1000px)">
-      <source srcset="https://ladiaria.com.uy/media/photologue/photos/cache/RS146842_20221220-MVU-004-lpr_900w.jpg"
-              media="(min-width: 800px)">
-      <source srcset="https://ladiaria.com.uy/media/photologue/photos/cache/RS146842_20221220-MVU-004-lpr_700w.jpg"
-              media="(min-width: 500px)">
-      <source srcset="https://ladiaria.com.uy/media/photologue/photos/cache/RS146842_20221220-MVU-004-lpr_450w.jpg"
-              media="(min-width: 300px)">
-      <source srcset="https://ladiaria.com.uy/media/photologue/photos/cache/RS146842_20221220-MVU-004-lpr_250w.jpg"
-              media="(min-width: 0px)">
-      <!--[if IE 9]></video><![endif]-->
-      <img class="ld-article__main-photo responsive-img landscape"
-           data-caption="Raúl Castro, _Tintabrava y el Bandón Murguero_, en la Sala Zitarrosa (archivo, diciembre de 2022). · Foto: Martín Varela Umpiérrez"
-           alt="Raúl Castro, _Tintabrava y el Bandón Murguero_, en la Sala Zitarrosa (archivo, diciembre de 2022). · Foto: Martín Varela Umpiérrez">
-    </picture>
+    <img src="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto1.jpg?raw=true" alt="Photo of a building designed by Pepe" />
     <p class="subtitle">Raúl Castro, Tintabrava y el Bandón Murguero, en la Sala Zitarrosa (archivo, diciembre de
       2022).</p>
     <p class="subtitle"> Foto: Martín Varela Umpiérrez</p>
