--- a/index.html
+++ b/index.html
@@ -349,6 +349,19 @@
 
   <div class="ld-fin ld-block"></div>
 </main>
+<footer><footer>
+  <p>
+    Made by <a href="https://www.linkedin.com/in/agustinferres/" >Agustin Ferres</a>
+  </p>
+  <p>
+    Find me on:
+    <a href="https://github.com/AgustinFerres">GitHub</a> |
+    <a href="https://instagram.com/aferres_44">Instagram</a>
+  </p>
+  <p>
+    &copy; 2024 Agustin Ferres.
+  </p>
+</footer>
 <script src="js/app.js" defer></script>
 
 </body>
