--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 <header class="nav-wrapper">
-  <a class="header-logo emergentes" href="/">
+  <a class="header-logo emergentes" href="/facundo-interview">
     <img src="https://ladiaria.com.uy/static/img/logo-ladiaria.svg"
          alt="Logo de la diaria" width="119" height="42">
   </a>
@@ -35,47 +35,47 @@
 
       <ul class="main-menu center hide-on-small-and-down">
         <li class="nav-menu__portada">
-          <a href="/"><span class="inner">Portada</span></a>
+          <a href="/facundo-interview"><span class="inner">Portada</span></a>
         </li>
 
 
         <li class="nav-menu__elecciones">
-          <a href="/elecciones/"><span class="inner">Elecciones 2024</span>
+          <a href="/facundo-interview"><span class="inner">Elecciones 2024</span>
 
           </a>
         </li>
 
 
         <li class="nav-menu__mundo">
-          <a href="/mundo/"><span class="inner">Mundo</span>
+          <a href="/facundo-interview"><span class="inner">Mundo</span>
 
           </a>
         </li>
 
 
         <li class="nav-menu__deporte">
-          <a href="/deporte/"><span class="inner">Deporte</span>
+          <a href="/facundo-interview"><span class="inner">Deporte</span>
 
           </a>
         </li>
 
 
         <li class="nav-menu__opinion">
-          <a href="/opinion/"><span class="inner">Opinión</span>
+          <a href="/facundo-interview"><span class="inner">Opinión</span>
 
           </a>
         </li>
 
 
         <li class="nav-menu__cultura">
-          <a href="/cultura/"><span class="inner">Cultura</span>
+          <a href="/facundo-interview"><span class="inner">Cultura</span>
 
           </a>
         </li>
 
 
         <li class="nav-menu__verifica">
-          <a href="/verifica/"><span class="inner">Verifica</span>
+          <a href="/facundo-interview"><span class="inner">Verifica</span>
 
           </a>
         </li>
