--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Entrevista Pepe</title>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="This is an interview with Pepe, a renowned architect. In this interview, Pepe shares his insights on architecture, storytelling, and his latest projects.">
+  <meta name="description" content="This is an interview with Pepe, a renowned architect. In this interview, Juan shares his insights on architecture, storytelling, and his latest projects.">
 
-  <meta property="og:title" content="Interview with Pepe">
+  <meta property="og:title" content="Interview with Juan">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://agustinferres.github.io/facundo-interview/">
-  <meta property="og:image" content="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto1.jpg?raw=true">
-  <meta property="og:image:alt" content="Photo of a building designed by Pepe">
+  <meta property="og:image" content="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto2.jpg?raw=true">
+  <meta property="og:image:alt" content="Photo of a building designed by Juan">
 
   <link rel="icon" href="https://github.com/AgustinFerres/facundo-interview/blob/main/img/img.png?raw=true" sizes="any">
   <link rel="icon" href="https://github.com/AgustinFerres/facundo-interview/blob/main/img/img.png?raw=true" type="image/svg+xml">
@@ -89,9 +89,10 @@
 <!-- Add your site or application content here -->
 <main id="main">
   <div id="foto">
-    <img src="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto1.jpg?raw=true" alt="Photo of a building designed by Pepe" />
-    <p class="subtitle">Raúl Castro, Tintabrava y el Bandón Murguero, en la Sala Zitarrosa (archivo, diciembre de
-      2022).</p>
+    <img src="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto2.jpg?raw=true" alt="Photo of a building designed by Pepe" />
+    <p class="subtitle">
+      <span class="italic">“Galería de Velos Suspendidos”</span>: la luz filtrada entre telas blancas (Obra del arquitecto Juan "Pepe", diciembre de 2022)
+    </p>
     <p class="subtitle"> Foto: Martín Varela Umpiérrez</p>
   </div>
   <div id="interview">
