--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
   <div class="ld-fin ld-block"></div>
 </main>
-<footer><footer>
+<footer>
   <p>
     Made by <a href="https://www.linkedin.com/in/agustinferres/" >Agustin Ferres</a>
   </p>
