--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Interview with Juan">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://agustinferres.github.io/facundo-interview/">
-  <meta property="og:image" content="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto2.jpg?raw=true">
+  <meta property="og:image" content="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto2.png?raw=true">
   <meta property="og:image:alt" content="Photo of a building designed by Juan">
 
   <link rel="icon" href="https://github.com/AgustinFerres/facundo-interview/blob/main/img/img.png?raw=true" sizes="any">
@@ -89,7 +89,7 @@
 <!-- Add your site or application content here -->
 <main id="main">
   <div id="foto">
-    <img src="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto2.jpg?raw=true" alt="Photo of a building designed by Pepe" />
+    <img src="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto2.png?raw=true" alt="Photo of a building designed by Pepe" />
     <p class="subtitle">
       <span class="italic">“Galería de Velos Suspendidos”</span>: la luz filtrada entre telas blancas (Obra del arquitecto Juan "Pepe", diciembre de 2022)
     </p>
