--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Entrevista Pepe</title>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="This is an interview with Pepe, a renowned architect. In this interview, Juan shares his insights on architecture, storytelling, and his latest projects.">
+  <meta name="description" content="This is an interview with Juan, a renowned architect. In this interview, Juan shares his insights on architecture, storytelling, and his latest projects.">
 
   <meta property="og:title" content="Interview with Juan">
   <meta property="og:type" content="article">
@@ -89,11 +89,11 @@
 <!-- Add your site or application content here -->
 <main id="main">
   <div id="foto">
-    <img src="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto2.png?raw=true" alt="Photo of a building designed by Pepe" />
+    <img src="https://github.com/AgustinFerres/facundo-interview/blob/main/img/foto2.png?raw=true" alt="Photo of a building designed by Juan" />
     <p class="subtitle">
       <span class="italic">“Galería de Velos Suspendidos”</span>: la luz filtrada entre telas blancas (Obra del arquitecto Juan "Pepe", diciembre de 2022)
     </p>
-    <p class="subtitle"> Foto: Martín Varela Umpiérrez</p>
+    <p class="subtitle"> Foto: DALL·E</p>
   </div>
   <div id="interview">
     <div id="interview-header">
